fixed borders, alignment, spacing top half of page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,7 +50,7 @@ aside {
     
     position:absolute;
     height: 166%;
-    width: 300px;
+    width: 12%;
     border-right-style:solid;
     border-width:5px;
     border-right-color: var(--neonblue);
@@ -67,12 +67,21 @@ aside ul {
 section {
     background: var(--black);
     color: var(--neonblue);
-    margin-left:300px;
+    
+    
+}
+
+#mainContainer {
+    margin-left:12%;
+    
 }
 
 /* ABOUTME STYLE */
 #aboutMe {
     display:flex;
+    text-align:center;
+    
+
 }
 
 /* PARAGRAPH STYLES */
@@ -84,12 +93,18 @@ p {
     align-items: center;
 }
 
+#pic {
+border-right: solid 5px;
+border-right-color:--var(--neonblue);
+border-right
+}
+
 /* WORK SECTION STYLES */
 #work {
     display:flex;
     
    
-    margin-left: 300px;
+   
     background-color: var(--black);
     color: var(--neonblue);
     height: 400px;
